<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_45sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/lets_start"
            android:textColor="@color/black"
            android:textSize="@dimen/_26sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtGender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/gender"
            android:inputType="text"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/area"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtArea"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/area"
            android:inputType="text"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/btnSignIN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="@dimen/_20sdp" />


    </LinearLayout>
</ScrollView>