<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp" />


    <TextView
        android:id="@+id/txtSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />


</LinearLayout>