<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OTPActivity">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/black"
        android:textSize="@dimen/_26sdp"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvEnterdigits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/please_enter_4_digit_code_sent_to_you_at"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerify" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="+97190909090"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterdigits" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txtPinEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="number"
        android:maxLength="4"
        android:paddingBottom="@dimen/_10sdp"
        android:textIsSelectable="false"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
        app:pinAnimationType="popIn"
        app:pinBackgroundDrawable="@drawable/edit_text_bg" />


    <TextView
        android:id="@+id/tvResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/resend"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPinEntry" />


    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/verify_and_proceed"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResend" />
</androidx.constraintlayout.widget.ConstraintLayout>