<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_mysalonee_final_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/lnrLytSignUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/forgot_your_password"
        android:textColor="@color/text_grey_color"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrLytSignUP" />

    <Button
        android:id="@+id/btnSignIN"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/txtSignUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />


    <TextView
        android:id="@+id/txtSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIN" />
</androidx.constraintlayout.widget.ConstraintLayout>