<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CustomerSupportActivity">

    <TextView
        android:id="@+id/txtCustomerSupport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/customer_support"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/txtCustomerSupport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivCustomerSupport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/customersupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerSupport" />

    <TextView
        android:id="@+id/txtHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/how_can_we_help_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCustomerSupport" />

    <TextView
        android:id="@+id/txtHelpDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/how_can_we_help_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHelp" />

    <TextView
        android:id="@+id/txtPhNO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/ph_no"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHelpDesc" />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/salonee_email_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhNO" />

</androidx.constraintlayout.widget.ConstraintLayout>