<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_content_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/activity_home_main_toolbar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/search"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/search"
        android:paddingStart="@dimen/_10sdp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/white"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerHome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_16sdp">

                <TextView
                    android:id="@+id/txtSalonsNearMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="start"
                    android:text="@string/salons_near_you"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txtSeeALlShops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_toEndOf="@+id/txtSalonsNearMe"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="end"
                    android:text="@string/see_all"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSalonsNearMe"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBottomBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>